--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94f09b">  <td>25/07/26 19:18:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestFW.LoginTest()[pri:0, instance:testcase.MyFirstTestFW@372ea2bc]">LoginTest</td> 
+<tr bgcolor="e58f76">  <td>25/07/26 19:58:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestFW.LoginTest()[pri:0, instance:testcase.MyFirstTestFW@a486d78]">LoginTest</td> 
   <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="bcf2a3">  <td>25/07/26 19:18:40</td>   <td>-4331</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcase.MyFirstTestFW@372ea2bc]">&gt;&gt;setUp</td> 
+<tr bgcolor="9bf286">  <td>25/07/26 19:58:01</td>   <td>-6191</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcase.MyFirstTestFW@a486d78]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
+<tr bgcolor="9bf286">  <td>25/07/26 19:58:10</td>   <td>2429</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcase.MyFirstTestFW@a486d78]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
 </table>
