--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bf286">  <td>25/07/26 20:03:51</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcase.MyFirstTestFW@a486d78]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="9bf286">  <td>25/07/26 20:03:59</td>   <td>7326</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcase.MyFirstTestFW@a486d78]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
-<tr bgcolor="e58f76">  <td>25/07/26 20:03:56</td>   <td>4712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestFW.LoginTest()[pri:0, instance:testcase.MyFirstTestFW@a486d78]">LoginTest</td> 
+<tr bgcolor="9fabad">  <td>25/07/28 12:53:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcase.TestLeadCreation@11acdc30]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
+<tr bgcolor="71a194">  <td>25/07/28 12:53:17</td>   <td>3208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLeadCreation.LeadCreate(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testcase.TestLeadCreation@11acdc30]">LeadCreate</td> 
   <td>main@1283928880</td>   <td></td> </tr>
+<tr bgcolor="9fabad">  <td>25/07/28 12:53:30</td>   <td>16136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcase.TestLeadCreation@11acdc30]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1283928880</td>   <td></td> </tr>
 </table>
